umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@indigo_13rsites.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: extended_molecule_lenient
category: extended_molecule_lenient
molecule:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 16, col 31"
molecule_lenient:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 16, col 31"
extended_molecule:
  success: false
  error:
    error_type: MissingMEndTag
    message: Missing M  END tag at line 59
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C6O6
    atom_count: 25
    bond_count: 29
    extended_atoms: 13
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
