umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@indigo_1586.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  summary:
    sum_formula: C23NO+
    atom_count: 25
    bond_count: 27
    property_count: 1
molecule_lenient:
  success: true
  summary:
    sum_formula: C23NO+
    atom_count: 25
    bond_count: 27
    property_count: 1
extended_molecule:
  success: true
  extended_summary:
    sum_formula: C23NO+
    atom_count: 25
    bond_count: 27
    extended_atoms: 0
    extended_bonds: 0
    property_count: 1
    rgroup_count: 0
    sgroup_count: 0
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C23NO+
    atom_count: 25
    bond_count: 27
    extended_atoms: 0
    extended_bonds: 0
    property_count: 1
    rgroup_count: 0
    sgroup_count: 0
